정적 컨텐츠 수정

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/default_layout">
 <head>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Font Awesome icons (free version)-->
@@ -12,18 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../resources/assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../resources/assets/css/style.css?after" rel="stylesheet"/>
-    <link href="    common/commonstyle.css?after" rel="stylesheet"/>
+
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="assets/css/style.css?after" rel="stylesheet"/>
+    <link href="assets/css/commonstyle.css?after" rel="stylesheet"/>
 
     <!--swiper-->
-    <link href="../resources/assets/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <script src="../resources/assets/swiper/swiper-bundle.min.js"></script>
+    <link href="assets/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <script src="assets/swiper/swiper-bundle.min.js"></script>
     <title>Three Go</title>
 </head>
 <body>
 <!-- header-->
-<jsp:include page="common/searchheader.jsp"/>
+
+    <th:block layout:fragment="searchheader"></th:block>
+
+
+
+
 <!-- Icons Grid-->
 <section class="features-icons bg-light text-center">
     <div class="container">
@@ -69,7 +74,7 @@
                 <div class="col">
                     <a href="../../info/city.do?area=1">
                         <div class="card border-0">
-                            <img src="../../../proj/resources/assets/img/mainimg/seoul2.jpg" class="card-img-top rounded" alt="서울">
+                            <img src="assets/img/mainimg/seoul2.jpg" class="card-img-top rounded" alt="서울">
                             <div class="card-img-overlay cardgradient">
                                 <h4 class="card-title text-white text-center main_text">서울</h4>
                             </div>
@@ -80,7 +85,7 @@
                 <div class="col">
                     <a href="../../info/city.do?area=6">
                         <div class="card border-0">
-                            <img src="../../../proj/resources/assets/img/mainimg/busan.png" class="card-img-top rounded" alt="부산">
+                            <img src="assets/img/mainimg/busan.png" class="card-img-top rounded" alt="부산">
                             <div class="card-img-overlay cardgradient">
                                 <h4 class="card-title text-white text-center main_text">부산</h4>
                             </div>
@@ -91,7 +96,7 @@
                 <div class="col">
                     <a href="../../info/city.do?area=39">
                         <div class="card border-0">
-                            <img src="../../../proj/resources/assets/img/mainimg/jeju.jpg" class="card-img-top rounded" alt="제주">
+                            <img src="assets/img/mainimg/jeju.jpg" class="card-img-top rounded" alt="제주">
                             <div class="card-img-overlay cardgradient">
                                 <h4 class="card-title text-white text-center main_text">제주</h4>
                             </div>
@@ -102,7 +107,7 @@
                 <div class="col">
                     <a href="../../info/city.do?area=3">
                         <div class="card border-0">
-                            <img src="../../../proj/resources/assets/img/mainimg/daejeon.jpg" class="card-img-top rounded" alt="대전">
+                            <img src="assets/img/mainimg/daejeon.jpg" class="card-img-top rounded" alt="대전">
                             <div class="card-img-overlay cardgradient">
                                 <h4 class="card-title text-white text-center main_text">대전</h4>
                             </div>
@@ -113,7 +118,7 @@
                 <div class="col">
                     <a href="../../info/city.do?area=4">
                         <div class="card border-0">
-                            <img src="../../../proj/resources/assets/img/mainimg/daegu.png" class="card-img-top rounded" alt="대구">
+                            <img src="assets/img/mainimg/daegu.png" class="card-img-top rounded" alt="대구">
                             <div class="card-img-overlay cardgradient">
                                 <h4 class="card-title text-white text-center main_text">대구</h4>
                             </div>
@@ -124,7 +129,7 @@
                 <div class="col">
                     <a href="../../info/city.do?area=9">
                         <div class="card border-0">
-                            <img src="../../../proj/resources/assets/img/mainimg/kunggi.jpg" class="card-img-top rounded" alt="경기도 수원">
+                            <img src="assets/img/mainimg/kunggi.jpg" class="card-img-top rounded" alt="경기도 수원">
                             <div class="card-img-overlay cardgradient">
                                 <h4 class="card-title text-white text-center main_text">경기도</h4>
                             </div>
@@ -135,7 +140,7 @@
                 <div class="col">
                     <a href="../../info/city.do?area=5">
                         <div class="card border-0">
-                            <img src="../../../proj/resources/assets/img/mainimg/gwangju.jpg" class="card-img-top rounded" alt="광주">
+                            <img src="assets/img/mainimg/gwangju.jpg" class="card-img-top rounded" alt="광주">
                             <div class="card-img-overlay cardgradient">
                                 <h4 class="card-title text-white text-center main_text">광주</h4>
                             </div>
@@ -147,12 +152,11 @@
 
 
             <div class = "invisiblecard">
-                <%--7개 이후 --%>
                 <div class="row row-cols-1 row-cols-md-4 g-4 pt-4">
                     <div class="col">
                         <a href="../../info/city.do?area=32">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/gangwon.jpg" class="card-img-top rounded" alt="강원도">
+                                <img src="assets/img/mainimg/gangwon.jpg" class="card-img-top rounded" alt="강원도">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">강원도</h4>
                                 </div>
@@ -165,7 +169,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=7">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/ulsan.jpg" width="100%" class="card-img-top rounded" alt="울산">
+                                <img src="assets/img/mainimg/ulsan.jpg" width="100%" class="card-img-top rounded" alt="울산">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">울산</h4>
                                 </div>
@@ -176,7 +180,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=2">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/incheon.jpg" class="card-img-top rounded" alt="인천">
+                                <img src="assets/img/mainimg/incheon.jpg" class="card-img-top rounded" alt="인천">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">인천</h4>
                                 </div>
@@ -187,7 +191,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=8">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/sejong.png" class="card-img-top rounded" alt="세종">
+                                <img src="assets/img/mainimg/sejong.png" class="card-img-top rounded" alt="세종">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">세종</h4>
                                 </div>
@@ -198,7 +202,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=33">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/chungbuk.jpg" class="card-img-top rounded" alt="충북">
+                                <img src="assets/img/mainimg/chungbuk.jpg" class="card-img-top rounded" alt="충북">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">충북</h4>
                                 </div>
@@ -209,7 +213,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=34">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/chungnam.jpg" class="card-img-top rounded" alt="충남">
+                                <img src="assets/img/mainimg/chungnam.jpg" class="card-img-top rounded" alt="충남">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">충남</h4>
                                 </div>
@@ -220,7 +224,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=35">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/kyungbuk.jpg" class="card-img-top rounded" alt="경북">
+                                <img src="assets/img/mainimg/kyungbuk.jpg" class="card-img-top rounded" alt="경북">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">경북</h4>
                                 </div>
@@ -231,7 +235,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=36">
                             <div class="card border-0 " >
-                                <img src="../../../proj/resources/assets/img/mainimg/kyungnam.jpg" class="card-img-top rounded" alt="경남">
+                                <img src="assets/img/mainimg/kyungnam.jpg" class="card-img-top rounded" alt="경남">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">경남</h4>
                                 </div>
@@ -242,7 +246,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=37">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/jeonrabukdo.jpg" class="card-img-top rounded" alt="전북">
+                                <img src="assets/img/mainimg/jeonrabukdo.jpg" class="card-img-top rounded" alt="전북">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">전북</h4>
                                 </div>
@@ -253,7 +257,7 @@
                     <div class="col">
                         <a href="../../info/city.do?area=38">
                             <div class="card border-0 ">
-                                <img src="../../../proj/resources/assets/img/mainimg/jeonranamdo.jpg" class="card-img-top rounded" alt="전남">
+                                <img src="assets/img/mainimg/jeonranamdo.jpg" class="card-img-top rounded" alt="전남">
                                 <div class="card-img-overlay cardgradient">
                                     <h4 class="card-title text-white text-center main_text">전남</h4>
                                 </div>
@@ -270,11 +274,15 @@
 </section>
 
 <!--footer-->
-<jsp:include page="common/footer.jsp"/>
+
+
+<!--<jsp:include page="common/footer.jsp"/>-->
+
+
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<%--카드 --%>
+<!--카드 -->
 <script>
     // 버튼 누르면 더보기
     $(document).ready(function() {
